Integrate Google Form

--- a/index.html
+++ b/index.html
@@ -202,10 +202,12 @@
             <a href="#"><i class="fab fa-github"></i></a>
           </div>
         </div>
-        <form class="contact-form">
-          <input type="text" placeholder="Your Name" required>
-          <input type="email" placeholder="Your Email" required>
-          <textarea placeholder="Your Message" rows="5" required></textarea>
+        <form class="contact-form"
+          action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeOdLw-D1sxcwJYDA_q5IR3qQyiKyF1SQEQH3okAsoZSrntxA/formResponse"
+          method="POST" target="_blank">
+          <input type="text" name="entry.897604845" placeholder="Your Name" required>
+          <input type="email" name="entry.202386816" placeholder="Your Email" required>
+          <textarea name="entry.232186436" placeholder="Your Message" rows="5" required></textarea>
           <button type="submit" class="btn primary">Send Message</button>
         </form>
       </div>
