Replace hero icon with profile image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       </div>
       <div class="hero-visual">
         <div class="glow-circle"></div>
-        <div class="tech-icon"><i class="fas fa-robot"></i></div>
+        <img src="https://drive.google.com/uc?export=view&id=12XsGAA8rRKxMdVYJFiUyzeLaMZ6kJOid" alt="Muhammed Kaif"
+          class="hero-image">
       </div>
     </section>
 
