--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       </div>
       <div class="hero-visual">
         <div class="glow-circle"></div>
-        <img src="https://drive.google.com/uc?export=view&id=12XsGAA8rRKxMdVYJFiUyzeLaMZ6kJOid" alt="Muhammed Kaif"
-          class="hero-image">
+        <img src="/profile.jpg" alt="Muhammed Kaif" class="hero-image">
       </div>
     </section>
 
