--- a/index.html
+++ b/index.html
@@ -126,6 +126,21 @@
       <h2 class="section-title">Featured Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
+          <div class="project-icon"><i class="fas fa-hand-paper"></i></div>
+          <h3>3D-Printed Robotic Arm</h3>
+          <p>A functional robotic arm designed in TinkerCAD and controlled via Arduino.</p>
+        </div>
+        <div class="project-card">
+          <div class="project-icon"><i class="fas fa-hamburger"></i></div>
+          <h3>Food Serving Robot</h3>
+          <p>Autonomous robot designed for schools and cake shops to serve items.</p>
+        </div>
+        <div class="project-card">
+          <div class="project-icon"><i class="fas fa-shield-alt"></i></div>
+          <h3>School Bus Security</h3>
+          <p>IoT-based security system to ensure student safety in transit.</p>
+        </div>
+        <div class="project-card">
           <div class="project-icon"><i class="fas fa-seedling"></i></div>
           <h3>Automated Farming System</h3>
           <p>IoT-based fully automated system using pH, TDS, and turbidity sensors for efficient farming.</p>
