--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
           </div>
           <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/muhammed_kaif_v_?igsh=dTlscnNwbjlyMHBq" target="_blank"><i
+                class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
           </div>
         </div>
