Fix mobile responsiveness and add 3 new projects

--- a/index.html
+++ b/index.html
@@ -170,6 +170,21 @@
           <h3>Home Automation</h3>
           <p>Smart home solutions using various IoT sensors and actuators.</p>
         </div>
+        <div class="project-card">
+          <div class="project-icon"><i class="fas fa-eye"></i></div>
+          <h3>AI Watch</h3>
+          <p>Smart watch powered by AI using DF Robot HuskyLens module.</p>
+        </div>
+        <div class="project-card">
+          <div class="project-icon"><i class="fas fa-pen-fancy"></i></div>
+          <h3>CNC Plotter</h3>
+          <p>Automatic drawing machine / CNC Plotter for precision graphics.</p>
+        </div>
+        <div class="project-card">
+          <div class="project-icon"><i class="fas fa-baby-carriage"></i></div>
+          <h3>IoT Based Cradle</h3>
+          <p>Smart baby cradle with monitoring using ESP8266 IoT module.</p>
+        </div>
       </div>
     </section>
 
